HW10: localize "user with email already exists" message

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -20,6 +20,7 @@ user.active=Активный
 user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
+user.already.registered=Пользователь с такой электронной почтой уже зарегистрирован
 
 meal.title=Моя еда
 meal.edit=Редактировать еду
