HW10: add exception processing for duplicate date/time of the meal

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -33,6 +33,7 @@ meal.endTime=До времени (исключая)
 meal.description=Описание
 meal.dateTime=Дата/Время
 meal.calories=Калории
+meal.existed.by.datetime=У вас уже есть запись на эти дату и время
 
 common.add=Добавить
 common.select=Выбрать
